--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,12 +13,14 @@ code {
     monospace;
 }
 
-#header {
-  height: 100%;
-  display: table;
-  font-weight: 200;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;  
+h1{
+  width: 100%;
+  height: 80px;
+  display: block;
+  font-family: 'Rubik Dirt', cursive; 
   font-variant: small-caps;
+  font-size: 70px;
+  text-align: center;
 }
 
 .inner_header{
@@ -26,5 +28,20 @@ code {
   height: 100%;
   display: block;
   margin: 0 auto;
-  
+  background-color: #086654;
+}
+
+#goals-description {
+  font-family: cursive;
+  font-size: large;
+}
+
+#row-inputs{
+  font: 1em cursive;
+  background-color: rgb(9, 9, 5);
+  color:#29ac94
+}
+
+#add-btn{
+  margin-left: .5rem;
 }
